demos/mq_simple/tmpl/ccdt-http-access-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-access-svc
  namespace: $VAR_MQ_NAMESPACE
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  internalTrafficPolicy: Cluster
  ipFamilyPolicy: SingleStack
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP
